--- a/form/sign_up.html
+++ b/form/sign_up.html
@@ -10,48 +10,33 @@
 </head>
 
 <body>
-    <!-- header section starts  -->
-    <header>
-        <div class="logo invert">
-            <a href="../index.html">
-                <img src="../images/logo.webp" alt="Logo">
-            </a>
-        </div>
-        <div class="menu">
-            <a href="Product.html">Product</a>
-            <a href="Services.html">Services</a>
-            <a href="About_us.html">About Us</a>
-            <a href="Contact_us.html">Contact Us</a>
-        </div>
-        <div class="icons">
-            <a href="../form/sign_in.html"><img src="../images/user.svg" alt="user"></a>
-            <a href="Wishlist.html"><img src="../images/wishlist.svg" alt="wishlist"></a>
-            <a href="Cart.html"><img src="../images/cart.svg" alt="cart"></a>
-        </div>
-    </header>
-    <!-- header section ends  -->
 
     <!-- form section starts  -->
-    <form action="">
-        <div class="form top">
-            <h1>Create account</h1>
-            <div class="form-input">
-                <input type="name" name="fname" placeholder="First Name" required>
+    <div class="form">
+        <div class="form-style">
+            <div class="left">
+                <h1>Create account</h1>
+                <form action="">
+                    <div class="form-input">
+                        <input type="name" name="fname" placeholder="First Name" required>
+                    </div>
+                    <div class="form-input">
+                        <input type="name" name="lname" placeholder="Last Name" required>
+                    </div>
+                    <div class="form-input">
+                        <input type="email" name="email" placeholder="Email" required>
+                    </div>
+                    <div class="form-input">
+                        <input type="password" placeholder="Password" required>
+                    </div>
+                    <button><a href="#">Create</a></button>
+                </form>
             </div>
-            <div class="form-input">
-                <input type="name" name="lname" placeholder="Last Name" required>
-            </div>
-            <div class="form-input">
-                <input type="email" name="email" placeholder="Email" required>
-            </div>
-            <div class="form-input">
-                <input type="password" placeholder="Password" required>
-            </div>
-            <div class="form-input">
-                <button><a href="#">Create</a></button>
+            <div class="right">
+                <!-- <img src="../images/form-right.webp" alt=""> -->
             </div>
         </div>
-    </form>
+    </div>
     <!-- form section ends  -->
 </body>
 
