--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- Main-banner section starts -->
     <section id="main-banner">
-        <div class="main-banner-content">
+        <div class="main-banner-content padding">
             <div class="left">
                 <div class="left-content">
                     <h1>Discover Our Unique Luxury
@@ -64,6 +64,30 @@
                         <a href="Product.html">
                             <img src="images/banner-product-3.webp" alt="">
                         </a>
+                    </div>
+                </div>
+                <div class="customers-block">
+                    <div class="customers-img">
+                        <img src="images/customer-1.png" alt="">
+                    </div>
+                    <div class="customers-img">
+                        <img src="images/customer-2.png" alt="">
+                    </div>
+                    <div class="customers-img">
+                        <img src="images/customer-3.png" alt="">
+                    </div>
+                    <div class="customers-img">
+                        <img src="images/customer-4.png" alt="">
+                    </div>
+                    <div class="customers-img">
+                        <img src="images/customer-5.png" alt="">
+                    </div>
+                    <div class="customers-content">
+                        <h4>Our Happy Customers</h4>
+                        <div class="customer-ratings">
+                            <img src="images/star.svg" alt="">
+                            <p>4.00 (Reviews)</p>
+                        </div>
                     </div>
                 </div>
                 <div class="social-icons invert">
@@ -94,46 +118,147 @@
     <!-- Main-banner section ends -->
 
     <!-- category-block section starts -->
-    <section id="category-block">
+    <section id="category-block" class="bg-color">
         <div class="section-style">
             <h2>Shop Categories</h2>
             <div class="card-container">
                 <div class="cards">
                     <a href="#">
                         <img src="images/option-earring.jpg" alt="">
+                        <div class="card-content">
+                            <h3>Earrings</h3>
+                            <div class="right-arrow">
+                                <img src="images/arrow-right.svg" alt="">
+                            </div>
+                        </div>
                     </a>
-                    <div class="card-content">
-                        <h3>Earrings</h3>
-                    </div>
                 </div>
                 <div class="cards">
                     <a href="#">
                         <img src="images/option-necklaces.jpg" alt="">
+                        <div class="card-content">
+                            <h3>Neckwears</h3>
+                            <div class="right-arrow">
+                                <img src="images/arrow-right.svg" alt="">
+                            </div>
+                        </div>
                     </a>
-                    <div class="card-content">
-                        <h3>Necklaces</h3>
-                    </div>
                 </div>
                 <div class="cards">
                     <a href="#">
                         <img src="images/option-bracelets.webp" alt="">
+                        <div class="card-content">
+                            <h3>Bracelets</h3>
+                            <div class="right-arrow">
+                                <img src="images/arrow-right.svg" alt="">
+                            </div>
+                        </div>
                     </a>
-                    <div class="card-content">
-                        <h3>Bracelets</h3>
-                    </div>
                 </div>
                 <div class="cards">
                     <a href="#">
                         <img src="images/option-ring.webp" alt="">
+                        <div class="card-content">
+                            <h3>Rings</h3>
+                            <div class="right-arrow">
+                                <img src="images/arrow-right.svg" alt="">
+                            </div>
+                        </div>
                     </a>
-                    <div class="card-content">
-                        <h3>Rings</h3>
-                    </div>
+                </div>
+                <!-- <div class="cards">
+                    <a href="#">
+                        <img src="images/option-pendant.webp" alt="">
+                        <div class="card-content">
+                            <h3>Pendant</h3>
+                            <div class="right-arrow">
+                                <img src="images/arrow-right.svg" alt="">
+                            </div>
+                        </div>
+                    </a>
+                </div> -->
+                <div class="cards">
+                    <a href="#">
+                        <img src="images/option-bangles.jpg" alt="">
+                        <div class="card-content">
+                            <h3>Bangles</h3>
+                            <div class="right-arrow">
+                                <img src="images/arrow-right.svg" alt="">
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
     </section>
     <!-- category-block section ends -->
+
+
+    <!-- product section starts -->
+    <section id="product" class="bg-color">
+        <div class="section-style">
+            <h3>Latest Collection</h3>
+            <h2>Weekly Best Seller</h2>
+            <div class="product-container">
+                <div class="product-cards">
+                    <div class="product-img">
+                        <img src="images/double-ring.webp" alt="">
+                    </div>
+                    <div class="product-content">
+                        <h4>Rings</h4>
+                        <h3>Millie Ring</h3>
+                        <h5>Rs.400</h5>
+                            <button>Add to cart</button>
+                    </div>
+                </div>
+                <div class="product-cards">
+                    <div class="product-img">
+                        <img src="images/gold necklace.jpg" alt="">
+                    </div>
+                    <div class="product-content">
+                        <h4>Neckwears</h4>
+                        <h3>Gold Necklace</h3>
+                        <h5>Rs.800</h5>
+                        <button>Add to cart</button>
+                    </div>
+                </div>
+                <div class="product-cards">
+                    <div class="product-img">
+                        <img src="images/gold ring.jpg" alt="">
+                    </div>
+                    <div class="product-content">
+                        <h4>Ring</h4>
+                        <h3>Gold Ring</h3>
+                        <h5>Rs.1200</h5>
+                        <button>Add to cart</button>
+                    </div>
+                </div>
+                <div class="product-cards">
+                    <div class="product-img">
+                        <img src="images/heart earrings.webp" alt="">
+                    </div>
+                    <div class="product-content">
+                        <h4>Earring</h4>
+                        <h3>Heart-shaped Earrings</h3>
+                        <h5>Rs.799</h5>
+                        <button>Add to cart</button>
+                    </div>
+                </div>
+                <div class="product-cards">
+                    <div class="product-img">
+                        <img src="images/gold pin earring.jpg" alt="">
+                    </div>
+                    <div class="product-content">
+                        <h4>Earring</h4>
+                        <h3>Gold Hoops Earring</h3>
+                        <h5>Rs.599</h5>
+                        <button>Add to cart</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- product section ends -->
 </body>
 
 </html>
