--- a/form/sign_in.html
+++ b/form/sign_in.html
@@ -10,46 +10,30 @@
 </head>
 
 <body>
-    <!-- header section starts  -->
-    <header>
-        <div class="logo invert">
-            <a href="../index.html">
-                <img src="../images/logo.webp" alt="Logo">
-            </a>
-        </div>
-        <div class="menu">
-            <a href="Product.html">Product</a>
-            <a href="Services.html">Services</a>
-            <a href="About_us.html">About Us</a>
-            <a href="Contact_us.html">Contact Us</a>
-        </div>
-        <div class="icons">
-            <a href="form/sign_in.html"><img src="../images/user.svg" alt="user"></a>
-            <a href="Wishlist.html"><img src="../images/wishlist.svg" alt="wishlist"></a>
-            <a href="Cart.html"><img src="../images/cart.svg" alt="cart"></a>
-        </div>
-    </header>
-    <!-- header section ends  -->
-
     <!-- form section starts  -->
-    <form action="">
-        <div class="form top">
-            <h1>Login</h1>
-            <div class="form-input">
-                <input type="email" name="email" placeholder="Email" required>
+    <div class="form">
+        <div class="form-style">
+            <div class="left">
+                <h1>Login</h1>
+                <form action="">
+                    <div class="form-input">
+                        <input type="email" name="email" placeholder="Email" required>
+                    </div>
+                    <div class="form-input">
+                        <input type="password" placeholder="Password" required>
+                    </div>
+                    <h4><a href="#" class="forgot">Forgot your password?</a></h4>
+                    <button><a href="#">Sign In</a></button>
+                </form>
+                <div id="create-account">
+                    <h4>Don't have an account?<a href="../form/sign_up.html">Create</a></h4>
+                </div>
             </div>
-            <div class="form-input">
-                <input type="password" placeholder="Password" required>
-            </div>
-            <a href="#" class="forgot">Forgot your password?</a>
-            <!-- <div class="form-input"> -->
-            <button><a href="#">Sign In</a></button>
-            <!-- </div> -->
-            <div id="create-account">
-                <h4>Don't have an account?<a href="../form/sign_up.html">Create</a></h4>
+            <div class="right">
+                <!-- <img src="../images/form-right.webp" alt=""> -->
             </div>
         </div>
-    </form>
+    </div>
     <!-- form section ends  -->
 </body>
 
