--- a/form/sign_in.html
+++ b/form/sign_in.html
@@ -11,10 +11,41 @@
 
 <body>
     <!-- form section starts  -->
-    <div class="form">
+    <div class="sign-in">
         <div class="form-style">
             <div class="left">
-                <h1>Login</h1>
+<form class="form">
+    <p class="title">Register </p>
+    <p class="message">Signup now and get full access to our app. </p>
+        <div class="flex">
+        <label>
+            <input class="input" type="text" placeholder="" required="">
+            <span>Firstname</span>
+        </label>
+
+        <label>
+            <input class="input" type="text" placeholder="" required="">
+            <span>Lastname</span>
+        </label>
+    </div>  
+            
+    <label>
+        <input class="input" type="email" placeholder="" required="">
+        <span>Email</span>
+    </label> 
+        
+    <label>
+        <input class="input" type="password" placeholder="" required="">
+        <span>Password</span>
+    </label>
+    <label>
+        <input class="input" type="password" placeholder="" required="">
+        <span>Confirm password</span>
+    </label>
+    <button class="submit">Submit</button>
+    <p class="signin">Already have an acount ? <a href="#">Signin</a> </p>
+</form>
+                <!-- <h1>Login</h1>
                 <form action="">
                     <div class="form-input">
                         <input type="email" name="email" placeholder="Email" required>
@@ -27,7 +58,7 @@
                 </form>
                 <div id="create-account">
                     <h4>Don't have an account?<a href="../form/sign_up.html">Create</a></h4>
-                </div>
+                </div> -->
             </div>
             <div class="right">
                 <!-- <img src="../images/form-right.webp" alt=""> -->
