--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </a>
         </div>
         <div class="menu">
+            <a href="index.html">Home</a>
             <a href="Product.html">Product</a>
             <a href="Services.html">Services</a>
             <a href="About_us.html">About Us</a>
@@ -28,9 +29,13 @@
             <a href="Wishlist.html"><img src="images/wishlist.svg" alt="wishlist"></a>
             <a href="Cart.html"><img src="images/cart.svg" alt="cart"></a>
         </div> -->
-        <div class="btn">
-            <button><a href="form/sign_in.html">Log in</a></button>
-            <button><a href="form/sign_up.html">Sign Up</a></button>
+        <div class="buttons">
+             <div class="btn">
+                <a href="form/sign_in.html">Log in</a>
+            </div>
+            <div class="btn">
+                <a href="form/sign_up.html">Sign Up</a>
+            </div>
         </div>
 
     </header>
@@ -42,12 +47,14 @@
             <div class="left">
                 <div class="left-content">
                     <h1>Discover Our Unique Luxury
-                        Jewelry Collection</h1>
-                    <p class="para">Immerse yourself in elegance with our exclusive luxury jewelry
+                        Jewellery Collection</h1>
+                    <p class="para">Immerse yourself in elegance with our exclusive luxury jewellery
                         collection. Each piece is meticulously crafted, combining
                         timeless designs with modern sophistication.</p>
                 </div>
-                <button><a href="Product.html">Shop Now</a></button>
+                <div class="btn">
+                    <a href="Product.html">Shop Now</a></button>
+                </div>
                 <h2>Products</h2>
                 <div class="img-container">
                     <div class="images">
@@ -120,7 +127,8 @@
     <!-- category-block section starts -->
     <section id="category-block" class="bg-color">
         <div class="section-style">
-            <h2>Shop Categories</h2>
+            <h3>Shop By</h3>
+            <h2>Categories</h2>
             <div class="card-container">
                 <div class="cards">
                     <a href="#">
@@ -208,7 +216,9 @@
                         <h4>Rings</h4>
                         <h3>Millie Ring</h3>
                         <h5>Rs.400</h5>
-                            <button>Add to cart</button>
+                        <div class="btn">
+                            <a href="#">Add to cart</a>
+                        </div>
                     </div>
                 </div>
                 <div class="product-cards">
@@ -219,7 +229,9 @@
                         <h4>Neckwears</h4>
                         <h3>Gold Necklace</h3>
                         <h5>Rs.800</h5>
-                        <button>Add to cart</button>
+                        <div class="btn">
+                            <a href="#">Add to cart</a>
+                        </div>
                     </div>
                 </div>
                 <div class="product-cards">
@@ -230,7 +242,9 @@
                         <h4>Ring</h4>
                         <h3>Gold Ring</h3>
                         <h5>Rs.1200</h5>
-                        <button>Add to cart</button>
+                        <div class="btn">
+                            <a href="#">Add to cart</a>
+                        </div>
                     </div>
                 </div>
                 <div class="product-cards">
@@ -241,7 +255,9 @@
                         <h4>Earring</h4>
                         <h3>Heart-shaped Earrings</h3>
                         <h5>Rs.799</h5>
-                        <button>Add to cart</button>
+                        <div class="btn">
+                            <a href="#">Add to cart</a>
+                        </div>
                     </div>
                 </div>
                 <div class="product-cards">
@@ -252,13 +268,86 @@
                         <h4>Earring</h4>
                         <h3>Gold Hoops Earring</h3>
                         <h5>Rs.599</h5>
-                        <button>Add to cart</button>
+                        <div class="btn">
+                            <a href="#">Add to cart</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- product section ends -->
+
+    <!-- Testimonials section starts -->
+    <section id="testimonials" class="bg-color">
+        <div class="section-style">
+            <h3>Testimonials</h3>
+            <div class="testimonials-header">
+                <h2>What Our Customers Say</h2>
+                <h3>Every piece of jewelry tells a story -What's Yours?</h3>
+            </div>
+            <div class="testimonial-container">
+                <div class="testimonial-cards">
+                    <img src="images/quote-up.svg" alt="">
+                    <div class="testimonials-content">
+                        <h4>"The website is user-friendly, making the shopping experience smooth and enjoyable.
+                            Exceptional quality and service, perfect for finding that special piece."</h4>
+                    </div>
+                    <div class="author">
+                        <img src="images/customer-1.png" alt="">
+                        <h5>Maya Singh</h5>
+                    </div>
+                </div>
+
+                <div class="testimonial-cards">
+                    <img src="images/quote-up.svg" alt="">
+                    <div class="testimonials-content">
+                        <h4>"A truly luxurious shopping experience with high-quality, unique designs that stand out.
+                            Unique pieces
+                            that you won't find anywhere else. A must-visit for jewellery lovers!"</h4>
+                    </div>
+                    <div class="author">
+                        <img src="images/customer-2.png" alt="">
+                        <h5>Aisha Khan</h5>
+                    </div>
+                </div>
+
+                <div class="testimonial-cards">
+                    <img src="images/quote-up.svg" alt="">
+                    <div class="testimonials-content">
+                        <h4>"The ring was even prettier looking than the web image when I received it, and I was
+                            surprised how incredible it was."</h4>
+                    </div>
+                    <div class="author">
+                        <img src="images/customer-3.png" alt="">
+                        <h5>Riya Patel</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Testimonials section ends -->
+
+
+    <!-- instagram section starts-->
+    <div id="instagram" class="bg-color">
+        <div class="section-style">
+            <div class="insta-header">
+                <h2>Connect Us On</h2>
+                <div class="insta-icon"><img src="images/insta.svg" alt="">
+                </div>
+                <a href="https://www.instagram.com/auraofornaments/">
+                    <h3>@auraofornaments</h3>
+                </a>
+            </div>
+            <div class="insta-container">
+                
+            </div>
+        </div>
+    </div>
+    <!-- instagram section ends -->
+
+
 </body>
 
 </html>
