--- a/form/sign_in.html
+++ b/form/sign_in.html
@@ -15,25 +15,23 @@
         <div class="form-style">
             <div class="left">
                 <div class="form-container">
-                    <form action="">
-                        <h1 class="title">Login</h1>
+                    <h1 class="title">Login</h1>
+                    
+                    <form action="" id="signIn">
+                        <input placeholder="Email" type="email" id="loginEmail" name="email" required="" class="input">
 
-                        <label for="email" class="label">Email</label>
-                        <input type="email" id="email" name="email" required="" class="input">
-
-                        <label for="password" class="label">Password</label>
-                        <input type="password" id="password" name="password" required="" class="input">
+                        <input placeholder="Password" type="password" id="loginPassword" name="password" required="" class="input">
 
                         <div class="forgot">
                             <a href="#" class="forgot">Forgot your password?</a>
                         </div>
 
-                        <div class="button">
-                            <a href="#">Sign In</a>
-                        </div>
+                        <button type="submit">
+                            Sign In
+                        </button>
 
                     </form>
-                    <div id="create-account">
+                    <div id="account">
                         <h4>Don't have an account?<a href="../form/sign_up.html">Create</a></h4>
                     </div>
                 </div>
@@ -44,6 +42,7 @@
         </div>
     </div>
     <!-- form section ends  -->
+     <script src="../JavaScript/script.js"></script>
 </body>
 
 </html>
