--- a/form/sign_up.html
+++ b/form/sign_up.html
@@ -16,22 +16,22 @@
         <div class="form-style">
             <div class="left">
                 <div class="form-container">
-                    <form action="">
-                        <h1 class="title">Create Account</h1>
-                        <label for="Full Name" class="label">Full Name</label>
-                        <input type="text" id="name" name="name" required="" class="input">
+                    <h1 class="title">Create Account</h1>
+                    <form action="" id="signUp">
+                        <input placeholder="Name" type="text" id="name" name="name" required="" class="input">
 
-                        <label for="email" class="label">Email</label>
-                        <input type="email" id="email" name="email" required="" class="input">
+                        <input placeholder="Email" type="email" id="email" name="email" required="" class="input">
 
-                        <label for="password" class="label">Password</label>
-                        <input type="password" id="password" name="password" required="" class="input">
+                        <input placeholder="Password" type="password" id="password" name="password" required="" class="input">
 
-                        <div class="button">
-                            <a href="#">Create</a>
-                        </div>
+                        <button type="submit">
+                            Create
+                        </button>
 
                     </form>
+                    <div id="account">
+                        <h4>Already have an account?<a href="../form/sign_in.html">Login</a></h4>
+                    </div>
                 </div>
 
             </div>
@@ -40,6 +40,8 @@
             </div>
         </div>
         <!-- form section ends  -->
+         <script src="../JavaScript/script.js"></script>
 </body>
+
 
 </html>
