--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </div>
         <div class="menu">
             <a href="index.html">Home</a>
-            <a href="Product.html">Product</a>
-            <a href="Services.html">Services</a>
-            <a href="About_us.html">About Us</a>
-            <a href="Contact_us.html">Contact Us</a>
+            <a href="product.html">Product</a>
+            <a href="services.html">Services</a>
+            <a href="aboutUs.html">About Us</a>
+            <a href="contactUs.html">Contact Us</a>
         </div>
         <!-- <div class="icons invert">
             <a href="form/sign_in.html"><img src="images/user.svg" alt="user"></a>
@@ -30,7 +30,7 @@
             <a href="Cart.html"><img src="images/cart.svg" alt="cart"></a>
         </div> -->
         <div class="buttons">
-             <div class="btn">
+            <div class="btn">
                 <a href="form/sign_in.html">Log in</a>
             </div>
             <div class="btn">
@@ -125,7 +125,7 @@
     <!-- Main-banner section ends -->
 
     <!-- category-block section starts -->
-    <section id="category-block" class="bg-color">
+    <section id="category-block" class="bg-white">
         <div class="section-style">
             <h3>Shop By</h3>
             <h2>Categories</h2>
@@ -203,7 +203,7 @@
 
 
     <!-- product section starts -->
-    <section id="product" class="bg-color">
+    <section id="product" class="bg-white">
         <div class="section-style">
             <h3>Latest Collection</h3>
             <h2>Weekly Best Seller</h2>
@@ -279,7 +279,7 @@
     <!-- product section ends -->
 
     <!-- Testimonials section starts -->
-    <section id="testimonials" class="bg-color">
+    <section id="testimonials" class="bg-white">
         <div class="section-style">
             <h3>Testimonials</h3>
             <div class="testimonials-header">
@@ -288,7 +288,7 @@
             </div>
             <div class="testimonial-container">
                 <div class="testimonial-cards">
-                    <img src="images/quote-up.svg" alt="">
+                    <img src="images/quotation.svg" alt="">
                     <div class="testimonials-content">
                         <h4>"The website is user-friendly, making the shopping experience smooth and enjoyable.
                             Exceptional quality and service, perfect for finding that special piece."</h4>
@@ -300,7 +300,7 @@
                 </div>
 
                 <div class="testimonial-cards">
-                    <img src="images/quote-up.svg" alt="">
+                    <img src="images/quotation.svg" alt="">
                     <div class="testimonials-content">
                         <h4>"A truly luxurious shopping experience with high-quality, unique designs that stand out.
                             Unique pieces
@@ -313,7 +313,7 @@
                 </div>
 
                 <div class="testimonial-cards">
-                    <img src="images/quote-up.svg" alt="">
+                    <img src="images/quotation.svg" alt="">
                     <div class="testimonials-content">
                         <h4>"The ring was even prettier looking than the web image when I received it, and I was
                             surprised how incredible it was."</h4>
@@ -330,7 +330,7 @@
 
 
     <!-- instagram section starts-->
-    <div id="instagram" class="bg-color">
+    <div id="instagram" class="bg-white">
         <div class="section-style">
             <div class="insta-header">
                 <h2>Connect Us On</h2>
@@ -341,13 +341,128 @@
                 </a>
             </div>
             <div class="insta-container">
-                
+                <div class="cards picture-1">
+                    <img src="images/form-img.webp" alt="">
+                    <div class="info">
+                        <a href="#">
+                            <img src="images/insta.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="cards picture-2">
+                    <img src="images/insta-img.jpg" alt="">
+                    <div class="info">
+                        <a href="#">
+                            <img src="images/insta.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="cards picture-3">
+                    <img src="images/instagram-img.jpg" alt="">
+                    <div class="info">
+                        <a href="#">
+                            <img src="images/insta.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="cards picture-4">
+                    <img src="images/instagram-img.jpg" alt="">
+                    <div class="info">
+                        <a href="#">
+                            <img src="images/insta.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="cards picture-5">
+                    <img src="images/insta-img.jpg" alt="">
+                    <div class="info">
+                        <a href="#">
+                            <img src="images/insta.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="cards picture-6">
+                    <img src="images/form-img.webp" alt="">
+                    <div class="info">
+                        <a href="#">
+                            <img src="images/insta.svg" alt="">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <!-- instagram section ends -->
 
 
+    <!-- footer section starts -->
+    <div id="newsletter" class="bg-white">
+        <div class="section-style">
+            <div class="aboveContent">
+                <h2>Subscribe to Our Newsletter</h2>
+                <form action="">
+                    <div class="emailBox">
+                        <input placeholder="Enter Your Email Address" type="email" id="loginEmail" name="email"
+                            required="" class="input">
+                        <button type="submit">Add to cart</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div id="footer" class="bg-black">
+        <div class="section-style">
+            <div class="downContent">
+
+                <div class="leftContent">
+                    <div class="logo invert">
+                        <a href="index.html">
+                            <img src="images/logo.svg" alt="Logo">
+                        </a>
+                    </div>
+                    <h3>Explore the exquisite collection at Aura of Ornaments, where we bring you high-quality pieces
+                        designed to enhance your style and make every moment memorable</h3>
+                    <div class="social-icons invert">
+                        <a href="#">
+                            <img src="images/facebook.svg" alt="">
+                        </a>
+                        <a href="https://www.instagram.com/auraofornaments/">
+                            <img src="images/insta.svg" alt="">
+                        </a>
+                        <a href="https://chat.whatsapp.com/F4zpwaQiMNCEZq1fu7F1S5">
+                            <img src="images/whatsapp.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="rightContent">
+                    <div class="column">
+                        <h3>Site Map</h3>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="product.html">Product</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="aboutUs.html">About Us</a></li>
+                        <li><a href="contactUs.html">Contact Us</a></li>
+                    </div>
+                    <div class="column">
+                        <h3>About Us</h3>
+                        <li><a href="brand.html">Our Brand</a></li>
+                        <li><a href="termsOfService.html">Terms of service</a></li>
+                        <li><a href="refund.html">Refund Policy</a></li>
+                        <li><a href="privacyPolicy.html">Privacy Policy</a></li>
+                    </div>
+                    <div class="column">
+                        <h3>Support</h3>
+                        <li><a href="contactUs.html">Contact Us</a></li>
+                        <li><a href="faqs.html">FAQs</a></li>
+                        <li><a href="shipping.html">Shipping Policy</a></li>
+                        <!-- <li><a href="refund.html">Return,Refund and Cancellation Policy</a></li> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- footer section ends -->
 </body>
 
 </html>
