--- a/form/sign_in.html
+++ b/form/sign_in.html
@@ -16,11 +16,12 @@
             <div class="left">
                 <div class="form-container">
                     <h1 class="title">Login</h1>
-                    
+
                     <form action="" id="signIn">
                         <input placeholder="Email" type="email" id="loginEmail" name="email" required="" class="input">
 
-                        <input placeholder="Password" type="password" id="loginPassword" name="password" required="" class="input">
+                        <input placeholder="Password" type="password" id="loginPassword" name="password" required=""
+                            class="input">
 
                         <div class="forgot">
                             <a href="#" class="forgot">Forgot your password?</a>
@@ -37,12 +38,12 @@
                 </div>
             </div>
             <div class="right">
-                <!-- <img src="../images/form-right.webp" alt=""> -->
             </div>
         </div>
     </div>
     <!-- form section ends  -->
-     <script src="../JavaScript/script.js"></script>
+
+    <script src="../JavaScript/script.js"></script>
 </body>
 
 </html>
