--- a/form/sign_up.html
+++ b/form/sign_up.html
@@ -22,7 +22,8 @@
 
                         <input placeholder="Email" type="email" id="email" name="email" required="" class="input">
 
-                        <input placeholder="Password" type="password" id="password" name="password" required="" class="input">
+                        <input placeholder="Password" type="password" id="password" name="password" required=""
+                            class="input">
 
                         <button type="submit">
                             Create
@@ -39,8 +40,12 @@
                 <!-- <img src="../images/form-right.webp" alt=""> -->
             </div>
         </div>
-        <!-- form section ends  -->
-         <script src="../JavaScript/script.js"></script>
+    </div>
+    <!-- form section ends  -->
+
+
+
+    <script src="../JavaScript/script.js"></script>
 </body>
 
 
