--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
                 </div>
                 <div class="customers-block">
                     <div class="customers-img">
-                        <img src="images/customer-1.png" alt="">
+                        <img src="images/customer-1.webp" alt="">
                     </div>
                     <div class="customers-img">
-                        <img src="images/customer-2.png" alt="">
+                        <img src="images/customer-2.webp" alt="">
                     </div>
                     <div class="customers-img">
-                        <img src="images/customer-3.png" alt="">
+                        <img src="images/customer-3.webp" alt="">
                     </div>
                     <div class="customers-img">
-                        <img src="images/customer-4.png" alt="">
+                        <img src="images/customer-4.webp" alt="">
                     </div>
                     <div class="customers-img">
-                        <img src="images/customer-5.png" alt="">
+                        <img src="images/customer-5.webp" alt="">
                     </div>
                     <div class="customers-content">
                         <h4>Our Happy Customers</h4>
@@ -132,7 +132,7 @@
             <div class="card-container">
                 <div class="cards">
                     <a href="#">
-                        <img src="images/option-earring.jpg" alt="">
+                        <img src="images/option-earring.webp" alt="">
                         <div class="card-content">
                             <h3>Earrings</h3>
                             <div class="right-arrow">
@@ -143,7 +143,7 @@
                 </div>
                 <div class="cards">
                     <a href="#">
-                        <img src="images/option-necklaces.jpg" alt="">
+                        <img src="images/option-necklaces.webp" alt="">
                         <div class="card-content">
                             <h3>Neckwears</h3>
                             <div class="right-arrow">
@@ -187,7 +187,7 @@
                 </div> -->
                 <div class="cards">
                     <a href="#">
-                        <img src="images/option-bangles.jpg" alt="">
+                        <img src="images/option-bangles.webp" alt="">
                         <div class="card-content">
                             <h3>Bangles</h3>
                             <div class="right-arrow">
@@ -223,7 +223,7 @@
                 </div>
                 <div class="product-cards">
                     <div class="product-img">
-                        <img src="images/gold necklace.jpg" alt="">
+                        <img src="images/gold necklace.webp" alt="">
                     </div>
                     <div class="product-content">
                         <h4>Neckwears</h4>
@@ -236,7 +236,7 @@
                 </div>
                 <div class="product-cards">
                     <div class="product-img">
-                        <img src="images/gold ring.jpg" alt="">
+                        <img src="images/gold ring.webp" alt="">
                     </div>
                     <div class="product-content">
                         <h4>Ring</h4>
@@ -262,7 +262,7 @@
                 </div>
                 <div class="product-cards">
                     <div class="product-img">
-                        <img src="images/gold pin earring.jpg" alt="">
+                        <img src="images/gold pin earring.webp" alt="">
                     </div>
                     <div class="product-content">
                         <h4>Earring</h4>
@@ -279,7 +279,7 @@
     <!-- product section ends -->
 
     <!-- Testimonials section starts -->
-    <section id="testimonials" class="bg-white">
+    <section id="testimonials" class="bg-black">
         <div class="section-style">
             <h3>Testimonials</h3>
             <div class="testimonials-header">
@@ -290,11 +290,13 @@
                 <div class="testimonial-cards">
                     <img src="images/quotation.svg" alt="">
                     <div class="testimonials-content">
-                        <h4>"The website is user-friendly, making the shopping experience smooth and enjoyable.
-                            Exceptional quality and service, perfect for finding that special piece."</h4>
+                        <h4>"This website has a great selection of luxury jewelry, with perfect pieces for every style.
+                            The site is easy to use, making it simple to browse and find what you're looking for. With
+                            high-quality jewelry, it's the perfect place to find
+                            something special."</h4>
                     </div>
                     <div class="author">
-                        <img src="images/customer-1.png" alt="">
+                        <img src="images/customer-1.webp" alt="">
                         <h5>Maya Singh</h5>
                     </div>
                 </div>
@@ -302,12 +304,12 @@
                 <div class="testimonial-cards">
                     <img src="images/quotation.svg" alt="">
                     <div class="testimonials-content">
-                        <h4>"A truly luxurious shopping experience with high-quality, unique designs that stand out.
-                            Unique pieces
-                            that you won't find anywhere else. A must-visit for jewellery lovers!"</h4>
+                        <h4>"This website has an impressive selection of luxury jewelry, offering perfect pieces for
+                            every style and occasion. Whether you're searching for a unique statement piece or a
+                            timeless classic, this website has something special for everyone"</h4>
                     </div>
                     <div class="author">
-                        <img src="images/customer-2.png" alt="">
+                        <img src="images/customer-2.webp" alt="">
                         <h5>Aisha Khan</h5>
                     </div>
                 </div>
@@ -315,11 +317,11 @@
                 <div class="testimonial-cards">
                     <img src="images/quotation.svg" alt="">
                     <div class="testimonials-content">
-                        <h4>"The ring was even prettier looking than the web image when I received it, and I was
-                            surprised how incredible it was."</h4>
+                        <h4>"A truly luxurious shopping experience with high-quality, unique designs that stand out.
+                            Unique pieces that you won't find anywhere else. A must-visit for jewellery lovers!"</h4>
                     </div>
                     <div class="author">
-                        <img src="images/customer-3.png" alt="">
+                        <img src="images/customer-3.webp" alt="">
                         <h5>Riya Patel</h5>
                     </div>
                 </div>
@@ -342,7 +344,7 @@
             </div>
             <div class="insta-container">
                 <div class="cards picture-1">
-                    <img src="images/form-img.webp" alt="">
+                    <img src="images/insta-img1.webp" alt="">
                     <div class="info">
                         <a href="#">
                             <img src="images/insta.svg" alt="">
@@ -350,7 +352,7 @@
                     </div>
                 </div>
                 <div class="cards picture-2">
-                    <img src="images/insta-img.jpg" alt="">
+                    <img src="images/insta-img2.webp" alt="">
                     <div class="info">
                         <a href="#">
                             <img src="images/insta.svg" alt="">
@@ -358,7 +360,7 @@
                     </div>
                 </div>
                 <div class="cards picture-3">
-                    <img src="images/instagram-img.jpg" alt="">
+                    <img src="images/insta-img3.webp" alt="">
                     <div class="info">
                         <a href="#">
                             <img src="images/insta.svg" alt="">
@@ -366,7 +368,7 @@
                     </div>
                 </div>
                 <div class="cards picture-4">
-                    <img src="images/instagram-img.jpg" alt="">
+                    <img src="images/insta-img3.webp" alt="">
                     <div class="info">
                         <a href="#">
                             <img src="images/insta.svg" alt="">
@@ -374,7 +376,7 @@
                     </div>
                 </div>
                 <div class="cards picture-5">
-                    <img src="images/insta-img.jpg" alt="">
+                    <img src="images/insta-img2.webp" alt="">
                     <div class="info">
                         <a href="#">
                             <img src="images/insta.svg" alt="">
@@ -382,7 +384,7 @@
                     </div>
                 </div>
                 <div class="cards picture-6">
-                    <img src="images/form-img.webp" alt="">
+                    <img src="images/insta-img1.webp" alt="">
                     <div class="info">
                         <a href="#">
                             <img src="images/insta.svg" alt="">
